--- a/slack-jahia/action.yml
+++ b/slack-jahia/action.yml
@@ -34,6 +34,7 @@ runs:
       id: branch-name
       uses: tj-actions/branch-names@v5.4
     - name: Get repository name
+      shell: bash
       run: echo "REPO_NAME=$(basename ${{ github.repository }})" >> $GITHUB_ENV
 
     # if there was no failure
