--- a/dependencies-get-new-versions-javascript/action.yml
+++ b/dependencies-get-new-versions-javascript/action.yml
@@ -17,10 +17,10 @@ runs:
       shell: bash
       run: |
         echo "TODAY=$(date +'%Y-%m-%d')" >> $GITHUB_ENV
-        yarn outdated --json | jq 'to_entries | .[] | select(.key == "data") | select(.value | type=="object") | .value.body | .[] | tostring' > yarn-report.txt || true
+        yarn outdated --json | jq 'to_entries | .[] | select(.key == "data") | select(.value | type=="object") | .value.body | .[] | tostring' > yarn-report.md || true
         sed -i -r 's/"\[\\"(.*)\\",\\"(.*)\\",\\"(.*)\\",\\"(.*)\\",\\"(.*)\\",\\"(.*)\\"\]"/| \1 | \2 | \3 | \4 | \6 |/' yarn-report.txt
         echo 'MARKDOWN_NEW_VERSIONS_JS<<EOF' >> $GITHUB_ENV
-        cat npm-report.md >> $GITHUB_ENV
+        cat yarn-report.md >> $GITHUB_ENV
         echo 'EOF' >> $GITHUB_ENV
 
     - name: Create an issue with the NPM report
