--- a/publish/action.yml
+++ b/publish/action.yml
@@ -41,4 +41,4 @@ runs:
       shell: bash
       run: |
         EXTRACTED_NEXUS_ARTIFACT_URL=`grep -e "Uploaded.*\.jar" ${{steps.artifact_build.outputs}} | grep -v sources | sed -e 's/.*\(https.*.jar\).*/\1/g'` 
-        echo "::notice title=Artifact location (require VPN)::Artifact has been uploaded to: $EXTRACTED_NEXUS_ARTIFACT_URL"
+        echo "::notice title=Snapshot module location::Artifact has been uploaded to: $EXTRACTED_NEXUS_ARTIFACT_URL"
