--- a/sonar-analysis/action.yml
+++ b/sonar-analysis/action.yml
@@ -46,7 +46,7 @@ runs:
         echo "NEXUS_PASSWORD=${{ inputs.nexus_password }}" >> $GITHUB_ENV
 
     - name: Download build artifacts
-      uses: actions/download-artifact@v2
+      uses: actions/download-artifact@v3
       if: ${{ inputs.build_artifacts != '' }}
       with:
         name: ${{ inputs.build_artifacts }}
@@ -73,7 +73,7 @@ runs:
         echo "github_pr_id = ${{ inputs.github_pr_id }}"
 
     - name: Cache local Maven repository
-      uses: actions/cache@v2
+      uses: actions/cache@v3
       with:
         path: |
           ~/.owasp/dependency-check-data
@@ -84,7 +84,7 @@ runs:
 
     - name: Extract branch name
       shell: bash
-      run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
+      run: echo "branch=$(echo ${GITHUB_REF#refs/heads/})" >> $GITHUB_OUTPUT
       id: extract_branch
 
     - name: Set common Sonar parameters
