--- a/static-analysis/action.yml
+++ b/static-analysis/action.yml
@@ -43,9 +43,10 @@ inputs:
 runs:
   using: "composite"
   steps:
-    - uses: actions/setup-node@v2
+    - uses: actions/setup-node@v3
       with:
         node-version: ${{ inputs.node_version }}
+        cache: yarn
 
     # Install node dependencies
     - name: Run yarn if package.json exists in module folder
