--- a/release/action.yml
+++ b/release/action.yml
@@ -16,6 +16,14 @@ inputs:
   nexus_password:
     description: 'Nexus Password'
     required: true
+  tests_module_path:
+    description: 'Path to a folder in the repository containing a tests module to be built (Both NPM and MVN test module supported)'
+    required: false
+    default: 'tests/jahia-module/'
+  tests_module_type:
+    description: 'Type of module for the tests module (mvn,npm)'
+    required: false
+    default: 'mvn'    
   github_slug:
     description: 'GitHub SLUG of the module (for example: jahia/sandbox)'
     required: true
@@ -97,7 +105,15 @@ runs:
         echo "---"
         git show --summary
 
-    - name: Release prepare version for ${{ inputs.release_version }}
+    - name: Check if test module is present (MVN)
+      if: ${{ inputs.tests_module_type == 'mvn' }}
+      id: check_test_module_mvn
+      uses: andstor/file-existence-action@v2
+      with:
+        files: "${{ inputs.tests_module_path }}pom.xml"
+
+    - name: Prepare versioning variables
+      id: versions
       shell: bash
       run: |
         TAG_VERSION=$(echo ${{ inputs.release_version }})
@@ -112,7 +128,33 @@ runs:
           NEXT_REVISION=`expr $REVISION + 1`
           NEXT_DEVELOPMENT_VERSION="$MAJOR_VERSION.$MINOR_VERSION.$NEXT_REVISION"-SNAPSHOT
         fi
-        mvn -B -s ${{ inputs.mvn_settings_filepath }} -B -Dtag=$TAG_VERSION release:prepare -DreleaseVersion=$FINAL_RELEASE_VERSION -DdevelopmentVersion="$NEXT_DEVELOPMENT_VERSION" -DscmCommentPrefix="[skip ci] [maven-release-plugin]"
+        echo "FINAL_RELEASE_VERSION=${FINAL_RELEASE_VERSION}"
+        echo "NEXT_DEVELOPMENT_VERSION=${NEXT_DEVELOPMENT_VERSION}"
+        echo "next_development_version=${NEXT_DEVELOPMENT_VERSION}" >> $GITHUB_OUTPUT
+        echo "final_release_version=${FINAL_RELEASE_VERSION}" >> $GITHUB_OUTPUT
+        echo "tag_version=${TAG_VERSION}" >> $GITHUB_OUTPUT
+
+    - name: Release prepare version for ${{ inputs.release_version }}
+      shell: bash
+      run: |
+        echo "FINAL_RELEASE_VERSION=${{ steps.versions.outputs.final_release_version }}"
+        echo "NEXT_DEVELOPMENT_VERSION=${{ steps.versions.outputs.next_development_version }}"
+        echo "TAG_VERSION=${{ steps.versions.outputs.tag_version }}"
+        if [[ "${{ inputs.tests_module_type }}" == "mvn" && "${{ steps.check_test_module_mvn.outputs.files_exists }}" == "true" ]]; then
+          echo "Release prepare for test module"
+          cd ${{ inputs.tests_module_path }}
+          # We only want to generate one single tag (for both the module and the test module), thus not being able to use release:prepare
+          # We need to update the version in the test module, then commit these changes.
+          mvn -B -s ${GITHUB_WORKSPACE}/${{ inputs.mvn_settings_filepath }} versions:set -DnewVersion="${{ steps.versions.outputs.final_release_version }}"
+          git add .
+          git commit -m "[skip ci] [Test module] Update version of the test module to the release"
+          git push
+          mvn -B -s ${GITHUB_WORKSPACE}/${{ inputs.mvn_settings_filepath }} deploy
+        else
+          echo "No test module found"
+        fi
+        cd ${GITHUB_WORKSPACE}
+        mvn -B -s ${{ inputs.mvn_settings_filepath }} -B -Dtag=${{ steps.versions.outputs.tag_version }} release:prepare -DreleaseVersion="${{ steps.versions.outputs.final_release_version }}" -DdevelopmentVersion="${{ steps.versions.outputs.next_development_version }}" -DscmCommentPrefix="[skip ci] [maven-release-plugin]"
 
     - name: Cache local Maven repository
       uses: actions/cache@v3
@@ -138,7 +180,29 @@ runs:
 
     - name: Perform release
       shell: bash
-      run: mvn -B -s ${{ inputs.mvn_settings_filepath }} release:perform -Prelease-to-staging-repository
+      run: | 
+        # if [[ "${{ inputs.tests_module_type }}" == "mvn"  &&  "${{ steps.check_test_module_mvn.outputs.files_exists }}" == "true" ]]; then
+        #   echo "Perform release for test module"
+        #   cd ${{ inputs.tests_module_path }}
+        #   mvn -B -s ${GITHUB_WORKSPACE}/${{ inputs.mvn_settings_filepath }} release:perform -Prelease-to-staging-repository
+        # else
+        #   echo "No test module found"          
+        # fi
+        # cd ${GITHUB_WORKSPACE}
+        mvn -B -s ${{ inputs.mvn_settings_filepath }} release:perform -Prelease-to-staging-repository
+
+    - name: Set development version for the test module (if present)
+      shell: bash
+      run: | 
+        if [[ "${{ inputs.tests_module_type }}" == "mvn" && "${{ steps.check_test_module_mvn.outputs.files_exists }}" == "true" ]]; then
+          cd ${{ inputs.tests_module_path }}
+          mvn -B -s ${GITHUB_WORKSPACE}/${{ inputs.mvn_settings_filepath }} versions:set -DnewVersion="${{ steps.versions.outputs.next_development_version }}"
+          git add .
+          git commit -m "[skip ci] [Test module] Update version of the test module to the next development version"
+          git push
+        else
+          echo "No test module found to set development version"
+        fi
 
     - name: Copy artifacts
       shell: bash
