--- a/build-step-npm/action.yml
+++ b/build-step-npm/action.yml
@@ -24,10 +24,6 @@ runs:
     - uses: actions/setup-node@v4
       with:
         node-version: ${{ inputs.node_version }}
-    
-    - name: Enable corepack
-      run: corepack enable
-      shell: bash
 
     - name: Get package.json infos
       shell: bash
@@ -48,21 +44,13 @@ runs:
           echo "MODULE_VERSION=$MODULE_VERSION" >> $GITHUB_ENV
         fi
     
-    - name: Set yarn version
-      shell: bash
-      run: yarn set version stable
-
-    - name: Prepare the module
-      run: yarn install
-      shell: bash
-
-    - name: Build the module
-      run: yarn build
-      shell: bash
-
-    - name: Package the module
-      run: yarn jahia-pack
-      shell: bash
+    - name: Build Pack
+      run: |
+      corepack enable
+      yarn set version stable
+      yarn install
+      yarn build
+      yarn jahia-pack
 
     - name: Rename build file if necessary and move to /target
       shell: bash
