--- a/build-step-npm/action.yml
+++ b/build-step-npm/action.yml
@@ -44,12 +44,23 @@ runs:
           echo "MODULE_VERSION=$MODULE_VERSION" >> $GITHUB_ENV
         fi
     
-    - name: Build Pack
-      shell: bash
-      run: |
-        yarn install
-        yarn build
-        yarn jahia-pack
+    - name: Prepare the module
+      uses: borales/actions-yarn@v5
+      with:
+        cmd: install
+        dir: ${{ inputs.module_path }}
+
+    - name: Build the module
+      uses: borales/actions-yarn@v5
+      with:
+        cmd: build
+        dir: ${{ inputs.module_path }}
+
+    - name: Package the module
+      uses: borales/actions-yarn@v5
+      with:
+        cmd: jahia-pack
+        dir: ${{ inputs.module_path }}
 
     - name: Rename build file if necessary and move to /target
       shell: bash
