--- a/dependencies-check-java/action.yml
+++ b/dependencies-check-java/action.yml
@@ -47,7 +47,7 @@ runs:
       uses: actions/cache/restore@v3
       if: ${{ env.BASE_POM_NOT_FOUND == 0 }}
       with:
-        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+        key: ${{ runner.os }}-maven-${{ hashFiles('**/*/pom.xml') }}
         path: ~/.m2/repository
 
     - name: Get dependencies from local POM
