--- a/sonar-analysis/action.yml
+++ b/sonar-analysis/action.yml
@@ -43,6 +43,10 @@ inputs:
     description: 'Version of Java to load and use for the analysis'
     required: false
     default: '11'
+  nvd_apikey:
+    description: 'NVD API Key to download vulnerability database'
+    required: false
+    default: ''
 
 runs:
   using: 'composite'
@@ -114,7 +118,7 @@ runs:
           -Dsonar.dependencyCheck.htmlReportPath=target/dependency-check-report.html \
           -DretireJsAnalyzerEnabled=false -DnodeAnalyzerEnabled=false -DassemblyAnalyzerEnabled=false -DnodeAuditSkipDevDependencies=true \
           -DsuppressionFiles=https://raw.githubusercontent.com/Jahia/jahia/master/.owasp/suppressions.xml \
-          -DnvdApiKey=${{ secrets.NVD_APIKEY }} -DdataDirectory=~/.owasp/dependency-check-data"
+          -DdataDirectory=~/.owasp/dependency-check-data"
         echo "SONAR_PARAMS=${SONAR_PARAMS}" >> $GITHUB_ENV
 
     - name: Sonar OWASP
@@ -126,7 +130,7 @@ runs:
         else
           echo "Executing an OWASP analysis on branch: ${{ inputs.primary_release_branch }}"
           mvn -B -s ${{ inputs.mvn_settings_filepath }} org.owasp:dependency-check-maven:9.0.9:aggregate \
-            $SONAR_PARAMS
+            $SONAR_PARAMS ${{ inputs.nvd_apikey:+-DnvdApiKey=inputs.nvd_apikey }}
         fi
 
     - name: Sonar Release branch analysis
@@ -140,7 +144,8 @@ runs:
               -Dsonar.pullrequest.branch=$GITHUB_REF \
               -Dsonar.pullrequest.key=${{ inputs.github_pr_id }} \
               -Dsonar.pullrequest.base=${{ inputs.primary_release_branch }} \
-              -Dsonar.pullrequest.github.repository=${{ inputs.github_slug }}
+              -Dsonar.pullrequest.github.repository=${{ inputs.github_slug }} \
+              ${{ inputs.nvd_apikey:+-DnvdApiKey=inputs.nvd_apikey }}
         elif [[ ${{ steps.extract_branch.outputs.branch }} == ${{ inputs.primary_release_branch }} ]]; then
           echo "Executing an analysis on the main branch"
           mvn -B -s ${{ inputs.mvn_settings_filepath }} sonar:sonar \
