--- a/sonar-analysis/action.yml
+++ b/sonar-analysis/action.yml
@@ -43,6 +43,10 @@ inputs:
     description: 'Version of Java to load and use for the analysis'
     required: false
     default: '11'
+  nvd_apikey:
+    description: 'NVD API Key to download vulnerability database'
+    required: false
+    default: ''
 
 runs:
   using: 'composite'
@@ -114,7 +118,7 @@ runs:
           -Dsonar.dependencyCheck.htmlReportPath=target/dependency-check-report.html \
           -DretireJsAnalyzerEnabled=false -DnodeAnalyzerEnabled=false -DassemblyAnalyzerEnabled=false -DnodeAuditSkipDevDependencies=true \
           -DsuppressionFiles=https://raw.githubusercontent.com/Jahia/jahia/master/.owasp/suppressions.xml \
-          -DnvdApiKey=${{ secrets.NVD_APIKEY }} -DdataDirectory=~/.owasp/dependency-check-data"
+          -DdataDirectory=~/.owasp/dependency-check-data ${{ (inputs.nvd_apikey != '' && '-DnvdApiKey=') || '' }}${{ inputs.nvd_apikey }}"
         echo "SONAR_PARAMS=${SONAR_PARAMS}" >> $GITHUB_ENV
 
     - name: Sonar OWASP
